# Display-on-Nucleo

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  Display_Migration Debug.launch  Display_Migration.ioc  README.md
Adafruit_GFX_Library/: Adafruit_I2CDevice.h  Adafruit_SPIDevice.h  Arduino.h  Print.h
Core/Inc/: Adafruit_ILI9341_Parallel.h  comp.h  i2c.h  lcd_touch.h  main.h  mock_ili9341_demo.h  sai.h  spi.h  tim.h  usart.h  usb_otg.h
Core/Src/: Adafruit_GFX.cpp  Adafruit_ILI9341_Parallel.cpp  adc.c  can.c  comp.c  gpio.c  i2c.c  lcd_touch.c  main.c  mock_ili9341_demo.cpp  sai.c  sdmmc.c  spi.c  stm32l4xx_it.c  tim.c  usart.c  usb_otg.c
Debug/: makefile
Debug/Core/Src/: subdir.mk
Debug/Core/Startup/: subdir.mk
Debug/Drivers/STM32L4xx_HAL_Driver/Src/: subdir.mk
cmake/: gcc-arm-none-eabi.cmake
